--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "and": "0.0.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-dnd-html5-backend": "^10.0.2",
+    "react-dnd": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
