--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "license": "ISC",
   "dependencies": {
     "and": "0.0.3",
+    "classnames": "^2.2.6",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2",
-    "react-dnd": "^10.0.2"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
